# Thread-Message

./: .clang-format  CMakeLists.txt  LICENSE  README.md  make_tasks.sh
include/: message.hpp
main/: main.cpp
source/: message.cpp
unitTest/: utMessage.cpp  utQueue.cpp
